@@ -1,0 +1,32 @@
+/* $Id$
+ *
+ * Copyright (c) 2002  Daniel Elstner  <daniel.elstner@gmx.net>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License VERSION 2 as
+ * published by the Free Software Foundation.  You are not allowed to
+ * use any other version of the license; unless you got the explicit
+ * permission from the author to do so.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+#include "miscutils.h"
+#include <gtk/gtk.h>
+
+
+bool Util::gtk_version_at_least(unsigned int minor, unsigned int micro)
+{
+  g_assert(gtk_major_version == GTK_MAJOR_VERSION);
+
+  return ((gtk_minor_version > minor) ||
+          (gtk_minor_version == minor && gtk_micro_version >= micro));
+}
+
